# parallelSpmv

./: .gitignore  CMakeLists.txt  README.md  matrices  runAll.sh  runCluster.sh  runClusterTest.sh  runTest.sh
plots/: createPlot.sh  plot.gnp  style.gnp
plots/blackPanther/Freescale1/gnu/: parallelSpmv.txt  parallelSpmv_cluster.txt
plots/blackPanther/Freescale1/intel/: parallelSpmv.txt  parallelSpmv_cluster.txt
plots/blackPanther/Freescale1/pgi/: parallelSpmv.txt
plots/blackPanther/Si34H36/gnu/: parallelSpmv.txt  parallelSpmv_cluster.txt
plots/blackPanther/Si34H36/intel/: parallelSpmv.txt  parallelSpmv_cluster.txt
plots/blackPanther/Si34H36/pgi/: parallelSpmv.txt
plots/blackPanther/Transport/gnu/: parallelSpmv.txt  parallelSpmv_cluster.txt
plots/blackPanther/Transport/intel/: parallelSpmv.txt  parallelSpmv_cluster.txt
plots/blackPanther/Transport/pgi/: parallelSpmv.txt
plots/blackPanther/atmosmodm/gnu/: parallelSpmv.txt  parallelSpmv_cluster.txt
plots/blackPanther/atmosmodm/intel/: parallelSpmv.txt  parallelSpmv_cluster.txt
plots/blackPanther/atmosmodm/pgi/: parallelSpmv.txt
plots/blackPanther/crankseg_1/gnu/: parallelSpmv.txt  parallelSpmv_cluster.txt
plots/blackPanther/crankseg_1/intel/: parallelSpmv.txt  parallelSpmv_cluster.txt
plots/blackPanther/crankseg_1/pgi/: parallelSpmv.txt
plots/blackPanther/exxRap8/gnu/: parallelSpmv.txt
plots/blackPanther/exxRap8/intel/: parallelSpmv.txt
plots/blackPanther/exxRap8/pgi/: parallelSpmv.txt
plots/blackPanther/parabolic_fem/gnu/: parallelSpmv.txt  parallelSpmv_cluster.txt
plots/blackPanther/parabolic_fem/intel/: parallelSpmv.txt  parallelSpmv_cluster.txt
plots/blackPanther/parabolic_fem/pgi/: parallelSpmv.txt
plots/blackPanther/rajat30/gnu/: parallelSpmv.txt  parallelSpmv_cluster.txt
plots/blackPanther/rajat30/intel/: parallelSpmv.txt  parallelSpmv_cluster.txt
plots/blackPanther/rajat30/pgi/: parallelSpmv.txt
plots/blackPanther/ship_001/gnu/: parallelSpmv.txt  parallelSpmv_cluster.txt
plots/blackPanther/ship_001/intel/: parallelSpmv.txt  parallelSpmv_cluster.txt
plots/blackPanther/ship_001/pgi/: parallelSpmv.txt
plots/blackPanther/stomach/gnu/: parallelSpmv.txt  parallelSpmv_cluster.txt
plots/blackPanther/stomach/intel/: parallelSpmv.txt  parallelSpmv_cluster.txt
report/: introduction.tex  report.tex
src/: CMakeLists.txt
src/createCommunicator/: CMakeLists.txt  createColIdxMap.c  createCommunicator.c
src/include/: myMPI.h  parallelSpmv.h  parallelSpmvCleanData.h  parallelSpmvData.h  real.h
src/main/: CMakeLists.txt  parallelSpmv.c
src/reader/: CMakeLists.txt  getRowsNnzPerProc.c  reader.c  vectorReader.c
src/spmv/: CMakeLists.txt  spmv.c
src/startCommunication/: CMakeLists.txt  startCommunication.c
(+3 files in other folders)
